--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Полный перевод сайта в русскоязычной версии
+    Окно выбора категорий не переведно на русский
   environment: |
     Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
     ОС Windows 10
@@ -14,7 +14,7 @@
     Появляеться список категорий на английском языке
     
 - summary: |
-    Фильтр товара по цвету и размеру
+    Отсутсвие фильтра товара по цвету и размеру
   environment: |
     Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
     ОС Windows 10
@@ -26,19 +26,21 @@
     Фильтр товара по цвету и размеру отсутствует на сайте
     
 - summary: |
-    Пользователь может авторизироваться на сайте 
+    Хэштег товара не открывает категорию товаров
   environment: |
     Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
     ОС Windows 10
   steps-to-reproduce: |
     1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+    2. Нажимаем на карточку товара
+    3. Нажимаем на хэштег
   expected-result: |
-    Авторизация присутствует в функциональности сайта
+    Переходим в категорию выбраноного товара
   actual-result: |
-    Авторизация на сайте отсутствует
+    Переход не происходит 
     
 - summary: |
-    Сайт должен иметь мобильную версию
+    Текст сайта выходит за рамки заданных блоков в мобильной версии 
   environment: |
     Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
     ОС Windows 10
@@ -48,6 +50,39 @@
     3. Нажать на "Toggle device toolbar"
     4. Выбираем любой девайс
   expected-result: |
-    Сайт имеет мобильную версию 
+    Текст остаётся в заданных блоках
   actual-result: |
-    Сайт не имеет мобильную версию 
+    Текст выходит за рамки заданных блоков
+    
+- summary: |
+    Отсутствует рейтинг на карточке товара в каталоге товаров
+  environment: |
+    Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
+    ОС Windows 10
+  steps-toreproduce:
+    1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+    2. Смотрим на каталог товаров
+  expected-result: |
+    В каталоге товаров, на карточках товаров присутствует рейтинг этого товара
+  actual-result: |
+    В каталоге товаров, на карточках товаров отсутствует рейтинг этого товара
+    
+- summary: |
+    Орфографическая ошибка в окне "Заказ успешно формлен"
+  environment: |
+    Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
+    ОС Windows 10
+  steps-toreproduce:
+    1. Открыта главная страница https://hexlet-products-store.vercel.app/
+    2. Нажимаем на кнопку "В корзину", на любой карточке товара
+    3. Нажимаем на кнопку "Корзина"
+    4. Переходим на страницу корзины 
+    5. Нажимаем на кнопку "Оформить заказ"
+  expected-result: |
+    Появляется окно "Заказ успешно оформлен"
+  actual-result: |
+    Появляется окно "Заказ успешно формлен"
+  
+    
+  
+    
