--- a/test-cases.yml
+++ b/test-cases.yml
@@ -262,32 +262,32 @@
     На странице отображается "Ничего не найдено!"
     
 - summary: |
-    Фильтр по наличию включён
+    Фильтр в наличии включён
   requirement: |
-    При использовании фильтра по наличию, отображаются только те товары, которые есть в наличии
+    При использовании фильтра в наличии, отображаются только те товары, которые есть в наличии
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
     - Прокрутить страницу вниз
-    - Слева снизу, фильтр по наличию
+    - Слева снизу, фильтр в наличии
     - Проверить включён ли фильтр 
     - Фильтр включён
   expected-result: |
     При использовании функционала сайта, где идёт отображение товара на странице, будет предоставлен только товар в наличии
     
 - summary: |
-    Фильтр по наличию отключён
+    Фильтр в наличии отключён
   requirement: |
-    При отключенном фильтре по наличию, отображаются все товары
+    При отключенном фильтре в наличии, отображаются все товары
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps: 
     - Прокрутить странцу вниз
-    - Отключить фильтр по наличию 
+    - Отключить фильтр в наличии 
   expected-result: |
     При использовании функционала сайта, где идёт отображение товара на странице, будет предоставлен весь товар
 
