--- a/testing-report.yml
+++ b/testing-report.yml
@@ -31,7 +31,7 @@
   status: pass
   
 - summary: |
-    Смена языка сайта на русскоязычную версию
+    Полная смена языка сайта на русскоязычную версию
   status: fail
   
 - summary: |
