--- a/test-cases.yml
+++ b/test-cases.yml
@@ -121,7 +121,7 @@
     Покупка совершена, появляется окошко "Заказ успешно оформлен"
     
 - summary: |
-    Смена языка сайта на русскоязычную версию
+    Полная смена языка сайта на русскоязычную версию
   requirement: |
     При нажатии на кнопку "Язык", верхнем правом углу, предоставляется выбор языков. Выбираем русский язык
   prerequisites: |
