--- a/regress-report.yml
+++ b/regress-report.yml
@@ -8,11 +8,31 @@ test-cases:
     status: pass
     
   - summary: |
-      Просмотр страницы "Корзина"
+      Добавление нескольких товаров в корзину
     status: pass
     
   - summary: |
-      Смена языка сайта на русскоязычную версию
+      Удаление товара из корзины
+    status: pass
+    
+  - summary: |
+      Удаление нескольких товаров из корзины
+    status: pass
+    
+  - summary: |
+      Единомоментное удаление товаров их корзины
+    status: pass
+    
+  - summary: |
+      Продолжение покупок из корзины
+    status: pass
+    
+  - summary: |
+      Покупка товара совершается
+    status: pass
+    
+  - summary: |
+      Полная смена языка сайта на русскоязычную версию
     status: fail
     
   - summary: |
