--- a/test-cases.yml
+++ b/test-cases.yml
@@ -250,7 +250,7 @@
 - summary: |
     Фильтр цен взаимодействует не с нулём или не с целыми положительными числами
   requirement: |
-    При вводе целых отрицательных, иррациональных или дробных чисел, на странице отображается "Ничего не найдено!"
+    При вводе целых отрицательных, иррациональных или дробных чисел, в оба "поля" фильтра цен, то на странице отображается "Ничего не найдено!"
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
