--- a/test-cases.yml
+++ b/test-cases.yml
@@ -257,7 +257,7 @@
     Тестовых данных нет
   steps:
     - Прокручиваем страницу вниз
-    - Вводим целые отрицательные, иррациональные или дробные числа в "Поля" фильтра цен
+    - Вводим целые отрицательные, иррациональные или дробные числа в поля фильтра цен
   expected-result: |
     На странице отображается "Ничего не найдено!"
     
