--- a/regress-report.yml
+++ b/regress-report.yml
@@ -40,7 +40,11 @@ test-cases:
     status: pass
     
   - summary: |
-      Перемещение внутри сайта с помощью конпок "Предыдущая" и "Следующая"
+      Перемещение внутри сайта с помощью конпки "Следующая"
+    status: pass
+    
+  - summary: |
+      Перемещение внутри сайта с помощью кнопки "Предыдущая"
     status: pass
     
   - summary: |
@@ -56,27 +60,129 @@ test-cases:
     status: pass
     
   - summary: |
+      Поиск по ключевому слову, не выводит несуществующие товары 
+    status: pass
+    
+  - summary: |
       Фильтр по цене работает правильно
+    status: pass
+    
+  - summary: |
+      Фильтр цен взаимодействует не с нулём или не с целыми положительными числами
+    status: pass
+    
+  - summary: |
+      Фильтр в наличии включён
+    status: pass
+    
+  - summary: |
+      Фильтр в наличии отключён
+    status: fail
+    
+  - summary: |
+      Интерактивный поиск работает правильно
+    status: pass
+    
+  - summary: |
+      Интерактивный поиск  не отображает несуществующие товары при вводе одного символа
+    status: pass
+    
+  - summary: |
+      Интерактивный поиск  не отображает несуществующие товары при вводе комбинций символов
+    status: pass
+    
+  - summary: |
+      Поле "Поиск" работает
+    status: pass
+    
+  - summary: |
+      Хэштеги товаров переводят в "Категории"
+    status: pass
+    
+  - summary: |
+      На странице товара отображается цена со скидкой товара
+    status: pass
+    
+  - summary: |
+      На странице товара отображается цена без скидки товара
+    status: pass
+    
+  - summary: |
+      На странице товара отображается рейтинг товара
+    status: pass
+    
+  - summary: |
+      На странице товара отображается название товара
+    status: pass
+    
+  - summary: |
+      В каталоге отображается цена со скидкой товара
+    status: pass
+    
+  - summary: |
+      В каталоге отображается цена без скидки товара
+    status: pass
+    
+  - summary: |
+      В каталоге отображается рейтинг товара
+    status: fail
+    
+  - summary: |
+      В каталоге отображается название товара
+    status: pass
+    
+  - summary: |
+      Фильтр "Производитель" работает правильно
     status: pass
     
 bugreports:
   - summary: |
-      Сайт должен иметь полный функционал в мобильной версии
+      Выключенный фильтр "В наличии" не позволяет выводить на страницу товар, через поле "Поиск"
     environment: |
       Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
       ОС Windows 10
     steps-to-reproduce:
       1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-      2. Открыть DevTools
-      3. Нажать на "Toggle device toolbar"
-      4. Выбираем любой девайс
+      2. Прокручиваем вниз страницу
+      3. Отключаем фильтр "В наличии"
+      4. Вводим любые символы в поле "Поиск"
     expected-result: |
-      Присутствует выбор категорий в мобильной версии
+      На странице отображается то, что соответствует введённому в поле "Поиска"
     actual-result: |
-      Отсутствие выбора категорий в мобильной версии
+      Не происходит никакого вывода на страницу 
+      
+  - summary: |
+      Выключенный фильтр "В наличии" убирает кнопку перемещения "Следующая"
+    environment: |
+      Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
+      ОС Windows 10
+    steps-to-reproduce:
+      1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+      2. Прокручиваем вниз страницу
+      3. Отключаем фильтр "В наличии"
+      4. Прокручиваем вверх страницу
+    expected-result: |
+      Кнопка "Следующая" остается на месте
+    actual-result: |
+      Кнопка "Следующая" исчезает
+      
+  - summary: |
+      Выключенный фильтр "В наличии" не позволят выводить на страницу товары с включенным фильтром "Производитель"
+    environment: |
+      Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
+      ОС Windows 10
+    steps-to-reproduce:
+      1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+      2. Спускаемся вниз страницы
+      3. Отключаем фильтр "В наличии"
+      4. Выбираем любой бренд из фильтра "Производитель"
+    expected-result: |
+      На странице отобразится товары, согласно отключеному фильтру "В наличии" и фильтру "Производителя"
+    actual-result: |
+      Не происходит никакого вывода на страницу
     
   - summary: |
-      Полный перевод сайта в русскоязычной версии
+      При нажатии на кнопку "Магазин" сайт переходит на англоязычную версию 
     environment: |
       Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
       ОС Windows 10
@@ -84,32 +190,8 @@ bugreports:
       1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
       2. Нажать "Language"
       3. Выбрать "Russian"
-      4. Нажать на "Категория"
+      4. Нажать на кнопку "Магазин"
     expected-result: |
-      Появиться список категорий на русском языке
+      Сайт остатется в русскоязычной версии
     actual-result: |
-      Появляеться список категорий на английском языке
-      
-  - summary: |
-      Фильтр товара по цвету и размеру
-    environment: |
-      Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
-      ОС Windows 10
-    steps-to-reproduce: |
-      1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-    expected-result: |
-      Фильтр товара по цвету и размеру присутствует в функциональности сайта
-    actual-result: |
-      Фильтр товара по цвету и размеру отсутствует на сайте
-     
-  - summary: |
-      Пользователь может авторизироваться на сайте 
-    environment: |
-      Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
-      ОС Windows 10
-    steps-to-reproduce: |
-      1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-    expected-result: |
-      Авторизация присутствует в функциональности сайта
-    actual-result: |
-      Авторизация на сайте отсутствует
+      Сайт переходит на англоязычную версию 
